# knotter

./: .gitignore  Cargo.toml  Dockerfile_server  README.md  docker-compose.yml  mock_server.js  nginx.conf  package-lock.json
client/: Cargo.toml  Dockerfile  README.md  build_wasm_test.sh  entrypoint.sh  index.html  index.jsorg  mock_server.js
client/src/: ball.org  ball.rs  globe.rs  main.rs  orbit_camera_controller.rs  query_server.rs
client/src/ball/: color_material_map.rs  components.rs  mod.rs  resources.rs  spawn.rs  systems.rs
client/src/ui/: mod.rs  spawn.rs  systems.rs
client/web_test/: index.html  knotter.d.ts  knotter.js  knotter_bg.wasm.d.ts
server/knotter_api/: Cargo.toml  README.md  knotter_db.redb
server/knotter_api/load_testing/: locustfile.py  locustfile2.py
server/knotter_api/src/: errors.rs  helpers.rs  impulse_validation.rs  lib.rs  main.rs  point_validation.rs  serialization.rs
server/knotter_api/src/application/: mod.rs
server/knotter_api/src/application/services/: mod.rs  validation_service.rs
server/knotter_api/src/application/services/validation/: ball_impulse_validator.rs  ball_position_validator.rs  mod.rs
server/knotter_api/src/domain/: mod.rs
server/knotter_api/src/domain/dtos/: ball_dto.rs  ball_transaction_dto.rs  get_ball_transactions_by_globeid_response_dto.rs  impulse_dto.rs  insert_ball_dto.rs  insert_ball_response_dto.rs  mod.rs  position_dto.rs
server/knotter_api/src/domain/errors/: mod.rs  my_error.rs
server/knotter_api/src/domain/mapping/: ball_mapper.rs  mapping_tests.rs  mod.rs
server/knotter_api/src/domain/models/: ball_entity.rs  mod.rs
server/knotter_api/src/infrastructure/: mod.rs
server/knotter_api/src/infrastructure/database/: key_value_store.rs
server/knotter_api/src/interface/web/: errors.rs
server/knotter_api/src/interface/web/handlers/: delete.rs  health_check.rs  insert.rs  insert_tests.rs  mod.rs  query.rs
server/knotter_api/src/validation/: impulse_validation.rs  insert_validation.rs  mod.rs
server/knotter_api/tests/: api_tests.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/domain/dtos/: ball_dto.rs  ball_transaction_dto.rs  get_ball_transactions_by_globeid_response_dto.rs  get_new_globe_id_response_dto.rs  health_response_dto.rs  impulse_dto.rs  insert_ball_dto.rs  mod.rs  position_dto.rs
src/: main.rs  query_server.rs
