[package]
name = "knotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
opt-level = "z"
debug = false

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
shared = { path = "../shared" }
rand = "0.8"
bevy = "0.12"
# bevy = {version = "0.11.2", features = ["dynamic"] }
bevy_rapier3d = "0.23"
# smooth-bevy-cameras = "0.9.0"
# bevy-inspector-egui = "0.19.0"
bevy_mod_reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5", features = ["serde", "v4", "fast-rng", "macro-diagnostics",] }
bevy_wasm_window_resize = "0.2.1"
wasm-bindgen = "0.2"

# [dependencies.bevy]
# version = "0.12"
# default-features = false
# features = [
#   "webgl2"
# ]
