[package]
name = "knotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = 3
debug = false

[profile.wasm-release]
inherits = "release"
opt-level = "z"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
shared = { path = "../shared" }
rand = "0.8"
# Bevy dependency for non-WASM targets
bevy = "0.12"
bevy_rapier3d = "0.23"
bevy_mod_reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
bevy_wasm_window_resize = "0.2.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location", "Url"] }
url = "2"

# Additional dependencies for WASM target
# [target.'cfg(target_arch = "wasm32")'.dependencies]
# bevy = { version = "0.12", default-features = false, features = ["webgl2"] }
