[package]
name = "knotter_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["v1", "serde"] }
chrono ="0.4"
redb = "1.2.0"