[package]
name = "knotter_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../../shared" }
actix-cors = "0.6"
actix-web = "4"
actix-rt = "2.9.0"
chrono ="0.4"
redb = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# uuid = { version = "1.4", features = ["serde"] }
uuid = { version = "1.5", features = ["serde", "v4", "fast-rng", "macro-diagnostics",] }
regex = "1.10"
nalgebra = "0.32.3"
reqwest = { version = "0.11", features = ["json"] } 
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.10"
rand = "0.8"